# jsk_recognition

./: mkdocs.yml
docs/: Makefile
docs/source/: conf.py  index.rst
jsk_pcl_ros/: CMakeLists.txt  Doxyfile
jsk_pcl_ros/docs/: PolygonArrayAreaLikelihood.md
jsk_pcl_ros/include/jsk_pcl_ros/: plane_supported_cuboid_estimator.h
jsk_pcl_ros/launch/: door_handle_detection.launch
jsk_pcl_ros/src/: normal_estimation_omp_nodelet.cpp  plane_supported_cuboid_estimator_nodelet.cpp  polygon_array_foot_angle_likelihood_nodelet.cpp  region_growing_multiple_plane_segmentation_nodelet.cpp
jsk_pcl_ros_utils/: CMakeLists.txt  package.xml
jsk_pcl_ros_utils/include/jsk_pcl_ros/: add_point_indices.h  colorize_distance_from_plane.h  normal_flip_to_frame.h  plane_reasoner.h  plane_rejector.h  polygon_array_transformer.h  polygon_flipper.h  tf_transform_bounding_box.h  tf_transform_cloud.h  transform_pointcloud_in_bounding_box.h
jsk_pcl_ros_utils/src/: colorize_distance_from_plane_nodelet.cpp  intermittent_image_annotator_nodelet.cpp  normal_direction_filter_nodelet.cpp  normal_flip_to_frame_nodelet.cpp  plane_concatenator_nodelet.cpp  plane_reasoner_nodelet.cpp  plane_rejector_nodelet.cpp  polygon_array_angle_likelihood_nodelet.cpp  polygon_array_area_likelihood_nodelet.cpp  polygon_array_distance_likelihood_nodelet.cpp  polygon_array_foot_angle_likelihood_nodelet.cpp  polygon_array_transformer_nodelet.cpp  polygon_flipper_nodelet.cpp  polygon_magnifier_nodelet.cpp  selected_cluster_publisher_nodelet.cpp  tf_transform_bounding_box_nodelet.cpp  tf_transform_cloud_nodelet.cpp  transform_pointcloud_in_bounding_box_nodelet.cpp
jsk_pcl_ros_utils/tool/: depth_camera_error_visualization.cpp
jsk_perception/node_scripts/: label_image_decomposer.py  tile_image.py
jsk_recognition_utils/python/jsk_recognition_utils/: __init__.py
